glusterfs-testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: glusterfs-testpod
spec:
  containers:
    - name: test
      image: nginx
      volumeMounts:
        - mountPath: /test
          name: gluster-vol
  volumes:
    - name: gluster-vol
      persistentVolumeClaim:
        claimName: glusterfs-pvc
