glusterfs-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: default
subsets:
  - addresses:
      - ip: 10.39.1.181
      - ip: 10.39.1.182
      - ip: 10.39.1.183
    ports:
      - port: 1
